--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,18 +11,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-     - name: Genomför unit-tester
-       run: dotnet test
+    - name: Check in to branch
+      uses: actions/checkout@v2
+      
+    - name: Setup Dotnet Environment
+      uses: actions/setup-dotnet@v1
+      with:
+            dotnet-version: 5.0.x
+    - name: Run restore
+      run: dotnet restore
         
-     - name: Loggar in på Docker
-       uses: docker/login-action@v1
-       with:
+    - name: Build dotnet
+      run: dotnet build --no-restore
+    - name: Run test
+      run: dotnet test --no-build
+        
+    - name: Login to Docker
+      uses: docker/login-action@v1
+      with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
             
             
-     - name: Building the Docker Image
-       uses: docker/build-push-action@v2.9.0
-       with:
+    - name: Building the Docker Image
+      uses: docker/build-push-action@v2.9.0
+      with:
           push: true
           tags: mikaelaolsson/cloudapp:dev
