--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,4 +38,4 @@ jobs:
       with:
           push: true
           tags: mikaelaolsson/cloudapp:dev
-          context: ./cloudapp/
+          context: /cloudapp/
