--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -47,3 +47,12 @@ jobs:
           push: true
           tags: mikaelaolsson/cloudapp:latest
           file: ./CloudApp/Dockerfile
+          
+    - name: Kubernetes Set Context
+      uses: Azure/k8s-set-context@v2
+      with:
+        # Acceptable values: generic or arc
+        cluster-type: generic
+        # Acceptable values: kubeconfig or service-account or service-principal
+        method: kubeconfig
+        k8s-url: 20.91.216.3
