--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -49,10 +49,8 @@ jobs:
           file: ./CloudApp/Dockerfile
           
     - name: Kubernetes Set Context
-      uses: Azure/k8s-set-context@v2
+    - uses: azure/k8s-set-context@v2
       with:
-        # Acceptable values: generic or arc
-        cluster-type: generic
-        # Acceptable values: kubeconfig or service-account or service-principal
-        method: kubeconfig
+        method: service-account
         k8s-url: 20.91.216.3
+        k8s-secret: default-token-7w8x6
