--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,7 @@ on:
     branches: 
     - dev
     - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -50,8 +51,19 @@ jobs:
   deploy:
     # if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    needs: build
+    environment: 
+      name: "Production"
     
     steps: 
+    
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - run: |
+        az webapp list --query "[?state=='Running']"
+
     - name: Kubernetes Set Context
       uses: azure/k8s-set-context@v2
       with:
@@ -62,5 +74,6 @@ jobs:
     - name: Deploy to Kubernetes cluster
       uses: Azure/k8s-deploy@v3.0
       with:
-         manifests: deployment.yaml
+         manifests: |
+           ${{ github.repository }}/deployment.yaml
          strategy: canary
