--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,32 +48,32 @@ jobs:
           push: true
           tags: mikaelaolsson/cloudapp:latest
           file: ./CloudApp/Dockerfile
-  deploy:
-    # if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: build
-    environment: 
-      name: "Production"
+  # deploy:
+  #   # if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment: 
+  #     name: "Production"
     
-    steps: 
+  #   steps: 
     
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+  #   - uses: azure/login@v1
+  #     with:
+  #       creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - run: |
-        az webapp list --query "[?state=='Running']"
+  #   - run: |
+  #       az webapp list --query "[?state=='Running']"
 
-    - name: Kubernetes Set Context
-      uses: azure/k8s-set-context@v2
-      with:
-        method: service-account
-        k8s-url: 20.91.216.3
-        k8s-secret: ${{ secrets.KUBE_SECRET }}
+  #   - name: Kubernetes Set Context
+  #     uses: azure/k8s-set-context@v2
+  #     with:
+  #       method: service-account
+  #       k8s-url: 20.91.216.3
+  #       k8s-secret: ${{ secrets.KUBE_SECRET }}
         
-    - name: Deploy to Kubernetes cluster
-      uses: Azure/k8s-deploy@v3.0
-      with:
-         manifests: |
-           ${{ github.repository }}/deployment.yaml
-         strategy: canary
+  #   - name: Deploy to Kubernetes cluster
+  #     uses: Azure/k8s-deploy@v3.0
+  #     with:
+  #        manifests: |
+  #          ${{ github.repository }}/deployment.yaml
+  #        strategy: canary
