--- a/K8S/deployment.yaml
+++ b/K8S/deployment.yaml
@@ -5,29 +5,35 @@ metadata:
   labels:
     app: cloudapp
 spec:
-  replicas: 7
-  selector:
-    matchLabels:
-      app: cloudapp
-  strategy:
+  replicas: 4
+  strategy: 
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
-    type: RollingUpdate
+  selector:
+    matchLabels:
+      app: cloudapp
   template:
     metadata:
       labels:
         app: cloudapp
     spec:
-      containers: 
-      - name: cloudapp
-        image: mikaelaolsson/cloudapp:latest
-        resources:
-          limits:
-            memory: 512Mi
-            cpu: "1"
-          requests:
-            memory: 256Mi
-            cpu: "0.2"
-        ports: 
-        - containerPort: 80
+       containers: 
+       - name: cloudapp
+         image: mikaelaolsson/cloudapp:latest
+         ports: 
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name:  cloud-service
+spec:
+  selector:
+    app:  cloudapp
+  type:  LoadBalancer 
+  ports:
+  - name:  http
+    port:  80
+    targetPort:  80
