--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,10 +48,15 @@ jobs:
           push: true
           tags: mikaelaolsson/cloudapp:latest
           file: ./CloudApp/Dockerfile
-  # deploy:
-  #   # if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   needs: build
+  deploy:
+    # if: github.ref == 'refs/heads/main'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
   #   environment: 
   #     name: "Production"
     
