--- a/k8s.yaml
+++ b/k8s.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloudapp-deployment
+  name: cloudapp
   labels:
     app: cloudapp
 spec:
