--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,6 +53,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -69,4 +72,4 @@ jobs:
         uses: Azure/k8s-deploy@v3.0
         with:
          manifests: |
-           k8s.yml
+           k8s.yaml
