--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,8 @@ jobs:
           push: true
           tags: mikaelaolsson/cloudapp:latest
           file: ./CloudApp/Dockerfile
+
+
   deploy:
     # if: github.ref == 'refs/heads/main'
     needs: build
@@ -68,8 +70,8 @@ jobs:
           k8s-url: 20.91.216.3
           k8s-secret: ${{ secrets.KUBE_SECRET }}
         
-      - name: Deploy to Kubernetes cluster
-        uses: Azure/k8s-deploy@v3.0
+      - name: Deploy to Kubernetes
+        uses: Azure/k8s-deploy@v1
         with:
          manifests: |
            k8s.yaml
