--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,6 +69,23 @@ jobs:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
 
+      - name: Get tag name
+        uses: olegtarasov/get-tag@v2
+
+      - name: Get new container tag name
+        id: image-tag
+        run: |
+          echo ":: set-output name=image::mikaelaolsson/cloudapp:$GIT_TAG_NAME"
+
+      - name: Deploy to Kubernetes
+        uses: Azure/k8s-deploy@v1
+        with: 
+          manifests: | 
+            k8s.yaml
+          images: |
+            ${{ steps.image-tag.outputs.image }}
+
+
       # - name: Kubernetes Set Context
       #   uses: azure/k8s-set-context@v2
       #   with:
