--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,13 @@ on:
     - main
   workflow_dispatch:
 
+env:
+  REGISTRY_NAME: Docke
+  CLUSTER_NAME: cluster
+  CLUSTER_RESOURCE_GROUP: cloud-team
+  NAMESPACE: default
+  APP_NAME: cloudapp
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -62,29 +69,37 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      - name: Set context from Kubeconfig
-        uses: azure/k8s-set-context@v1
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBECONFIG }}
-          context: minikube
-
-      - name: Get tag name
-        uses: olegtarasov/get-tag@v2
-
-      - name: Get new container tag name
-        id: image-tag
-        run: |
-          echo ":: set-output name=image::mikaelaolsson/cloudapp:$GIT_TAG_NAME"
 
       - name: Deploy to Kubernetes
-        uses: Azure/k8s-deploy@v1
-        with: 
-          manifests: | 
-            k8s.yaml
+        uses: azure/k8s-deploy@v1
+        with:
+          manifests: |
+            ${{ github.workspace }}/manifests/k8s.yaml
           images: |
-            ${{ steps.image-tag.outputs.image }}
+            mikaelaolsson/cloudapp:latest
+          namespace: ${{ env.NAMESPACE }}
+      
+#       - name: Set context from Kubeconfig
+#         uses: azure/k8s-set-context@v1
+#         with:
+#           method: kubeconfig
+#           kubeconfig: ${{ secrets.KUBECONFIG }}
+
+#       - name: Get tag name
+#         uses: olegtarasov/get-tag@v2
+
+#       - name: Get new container tag name
+#         id: image-tag
+#         run: |
+#           echo ":: set-output name=image::mikaelaolsson/cloudapp:$GIT_TAG_NAME"
+
+#       - name: Deploy to Kubernetes
+#         uses: Azure/k8s-deploy@v1
+#         with: 
+#           manifests: | 
+#             k8s.yaml
+#           images: |
+#             ${{ steps.image-tag.outputs.image }}
 
 
       # - name: Kubernetes Set Context
