--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,43 +61,5 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-#       - name: Set context from Kubeconfig
-#         uses: azure/k8s-set-context@v1
-#         with:
-#           method: kubeconfig
-#           kubeconfig: ${{ secrets.KUBECONFIG }}
-
-#       - name: Get tag name
-#         uses: olegtarasov/get-tag@v2
-
-#       - name: Get new container tag name
-#         id: image-tag
-#         run: |
-#           echo ":: set-output name=image::mikaelaolsson/cloudapp:$GIT_TAG_NAME"
-
-#       - name: Deploy to Kubernetes
-#         uses: Azure/k8s-deploy@v1
-#         with: 
-#           manifests: | 
-#             k8s.yaml
-#           images: |
-#             ${{ steps.image-tag.outputs.image }}
-
-
-      - name: Kubernetes Set Context
-        uses: azure/k8s-set-context@v2
-        with:
-          method: service-account
-          k8s-url: 20.91.216.3
-          k8s-secret: ${{ secrets.KUBE_SECRET }}
-        
-      - name: Deploy to Kubernetes
-        uses: Azure/k8s-deploy@v1
-        with:
-         manifests: |
-           ./manifest/k8s.yaml
-         images: |
-           mikaelaolsson/cloudapp:latest
-         strategy: RollingUpdate
+          creds: ${{ secrets.AZURE_CREDENTIALS }} 
+          # and what do i do now? :'(
