--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,19 @@ jobs:
           push: true
           tags: mikaelaolsson/cloudapp:latest
           file: ./CloudApp/Dockerfile
+  
+  pull-request:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        if: github.ref == 'refs/heads/dev'
+        uses: actions/checkout@v2
+
+      - name: Create Pull Request
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.PAT }}
 
   deploy:
     needs: build
