--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,7 @@ jobs:
           file: ./CloudApp/Dockerfile
   
   pull-request:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
