--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,25 +68,37 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
-    steps:
-    - name: ssh
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_KEY }}
-        port: ${{ secrets.SERVER_PORT }}
-        script: kubectl rollout restart deployment cloudapp
+    # steps:
+    # - name: ssh
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.SERVER_HOST }}
+    #     username: ${{ secrets.SERVER_USERNAME }}
+    #     key: ${{ secrets.SERVER_KEY }}
+    #     port: ${{ secrets.SERVER_PORT }}
+    #     script: kubectl rollout restart deployment cloudapp
   # deploy:
   #   # if: github.ref == 'refs/heads/main'
   #   needs: build
   #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Login to Azure
-  #       uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }} 
-  #         # and what do i do now? :'(
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }} 
+      
+      - uses: azure/aks-set-context@v2.0
+        with:
+          resource-group: "cloud-team"
+          cluster-name: "cloudapp"
+      
+      - name: Kubernetes deploy
+        uses: azure/k8s-deploy@v3.0
+        with:
+         namespace: default
+         manifests: |
+           ./.k8s/deployment.yaml
+#         strategy: rollingUpdate 
