--- a/.k8s/deployment.yaml
+++ b/.k8s/deployment.yaml
@@ -37,3 +37,16 @@ spec:
   - name:  http
     port:  80
     targetPort:  80
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: cloudapp
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: cloudapp
+ minReplicas: 1
+ maxReplicas: 10
+ targetCPUUtilizationPercentage: 50
