--- a/.k8s/deployment.yaml
+++ b/.k8s/deployment.yaml
@@ -50,6 +50,7 @@ spec:
    apiVersion: apps/v1
    kind: Deployment
    name: cloudapp
+   image: mikaelaolsson/cloudapp:latest
  minReplicas: 1
  maxReplicas: 10
  targetCPUUtilizationPercentage: 50
