--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,44 +63,45 @@ jobs:
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
 
-  # deploy:
-  #   needs: build
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-
-    # steps:
-    # - name: ssh
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.SERVER_HOST }}
-    #     username: ${{ secrets.SERVER_USERNAME }}
-    #     key: ${{ secrets.SERVER_KEY }}
-    #     port: ${{ secrets.SERVER_PORT }}
-    #     script: kubectl rollout restart deployment cloudapp
-  fluxctl:
-    if: github.ref == 'refs/heads/main'
+  deploy:
     needs: build
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }} 
+    steps:
+    - name: ssh
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_KEY }}
+        port: ${{ secrets.SERVER_PORT }}
+        script: kubectl rollout restart deployment cloudapp
+ 
+  # fluxctl:
+  #   if: github.ref == 'refs/heads/main'
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - name: Login to Azure
+  #       uses: azure/login@v1
+  #       with:
+  #         creds: ${{ secrets.AZURE_CREDENTIALS }} 
       
-      - uses: azure/aks-set-context@v2.0
-        with:
-          resource-group: "cloud-team"
-          cluster-name: "cloudapp"
+  #     - uses: azure/aks-set-context@v2.0
+  #       with:
+  #         resource-group: "cloud-team"
+  #         cluster-name: "cloudapp"
       
-      - name: Setup fluxctl
-        uses: fluxcd/fluxctl-action@master
-      - name: Synchronize cluster
-        env:
-          FLUX_FORWARD_NAMESPACE: flux
-        run: fluxctl sync
+  #     - name: Setup fluxctl
+  #       uses: fluxcd/fluxctl-action@master
+  #     - name: Synchronize cluster
+  #       env:
+  #         FLUX_FORWARD_NAMESPACE: flux
+  #       run: fluxctl sync
 
     #   - name: Kubernetes deploy
     #     uses: azure/k8s-deploy@v3.0
