--- a/.k8s/deployment.yaml
+++ b/.k8s/deployment.yaml
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name:  cloud-service-extra
+  name:  cloud-service
 spec:
   selector:
     app:  cloudapp
