--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,9 +72,19 @@ jobs:
     - name: ssh
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.SERVER_HOST }}
+        host: ${{ secrets.VPN_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_KEY }}
+        key: ${{ secrets.VPN_KEY }}
         port: ${{ secrets.SERVER_PORT }}
-        timeout: 2m
-        script: kubectl rollout restart deployment cloudapp
+        echo: "Victory is mine...maybe?"
+
+
+    # - name: ssh
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.SERVER_HOST }}
+    #     username: ${{ secrets.SERVER_USERNAME }}
+    #     key: ${{ secrets.SERVER_KEY }}
+    #     port: ${{ secrets.SERVER_PORT }}
+    #     timeout: 1m
+    #     script: kubectl rollout restart deployment cloudapp
