--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,20 +63,52 @@ jobs:
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
 
-  deploy:
+  connect-open-vpn:
     needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-
     steps:
-    - name: ssh
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.VPN_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.VPN_KEY }}
-        port: ${{ secrets.SERVER_PORT }}
-        echo: "Victory is mine...maybe?"
+      - uses: actions/checkout@v1
+      - name: Install Open VPN
+        run: sudo apt-get install openvpn
+      - name: Connect VPN
+        uses: golfzaptw/action-connect-ovpn@master
+        id: connect_vpn
+        with:
+          PING_URL: ${{ secrets.SERVER_HOST }}
+          FILE_OVPN: '.github/vpn/config.ovpn'
+          SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
+        env:
+          CA_CRT: ${{ secrets.CA_CRT}}
+          USER_CRT: ${{ secrets.USER_CRT }}
+          USER_KEY: ${{ secrets.USER_KEY }}
+
+      - name: Check Connect VPN
+        run: echo ${{ steps.connect_vpn.outputs.STATUS }}
+      - name: ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: kubectl rollout restart deployment cloudapp
+
+      - name: kill vpn
+        if: always()
+        run: sudo killall openvpn
+
+
+
+    # steps:
+    # - name: ssh
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.VPN_HOST }}
+    #     username: ${{ secrets.SERVER_USERNAME }}
+    #     key: ${{ secrets.VPN_KEY }}
+    #     port: ${{ secrets.SERVER_PORT }}
+    #     echo: "Victory is mine...maybe?"
 
 
     # - name: ssh
@@ -86,5 +118,4 @@ jobs:
     #     username: ${{ secrets.SERVER_USERNAME }}
     #     key: ${{ secrets.SERVER_KEY }}
     #     port: ${{ secrets.SERVER_PORT }}
-    #     timeout: 1m
     #     script: kubectl rollout restart deployment cloudapp
