--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,20 +68,36 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Install Open VPN
-        run: sudo apt-get install openvpn
+      # - uses: actions/checkout@v1
+      # - name: Install Open VPN
+      #   run: sudo apt-get install openvpn
+
+      # - name: Connect VPN
+      #   uses: golfzaptw/action-connect-ovpn@master
+      #   id: connect_vpn
+      #   with:
+      #     PING_URL: ${{ secrets.SERVER_HOST }}
+      #     FILE_OVPN: '.github/vpn/config.ovpn'
+      #     SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
+      #   env:
+      #     CA_CRT: ${{ secrets.CA_CRT}}
+      #     USER_CRT: ${{ secrets.USER_CRT }}
+      #     USER_KEY: ${{ secrets.USER_KEY }}
+      - uses: actions/checkout@v2
+      - name: Install OpenVPN
+        run: |
+          sudo apt-get update
+          sudo apt-get --assume-yes --no-install-recommends install openvpn
+
+      - name: Setup VPN config
+        run: |
+          echo "${{ secrets.CA_CERT }}" > ca.crt
+          echo "${{ secrets.USER_CRT }}" > user.crt
+          echo "${{ secrets.USER_KEY }}" > user.key
+          echo "${{ secrets.SECRET_USERNAME_PASSWORD}}" > secret.txt
+
       - name: Connect VPN
-        uses: golfzaptw/action-connect-ovpn@master
-        id: connect_vpn
-        with:
-          PING_URL: ${{ secrets.SERVER_HOST }}
-          FILE_OVPN: './.github/vpn/config.ovpn'
-          SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
-        env:
-          CA_CRT: ${{ secrets.CA_CRT}}
-          USER_CRT: ${{ secrets.USER_CRT }}
-          USER_KEY: ${{ secrets.USER_KEY }}
+        run: sudo openvpn --config "./.github/vpn/config.ovpn" --log "vpn.log" --daemon
 
       - name: Check Connect VPN
         run: echo ${{ steps.connect_vpn.outputs.STATUS }}
