--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,32 +63,69 @@ jobs:
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
 
-  connect-open-vpn:
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install Open VPN
-        run: sudo apt-get install openvpn
 
-      - name: Connect VPN
-        uses: golfzaptw/action-connect-ovpn@master
-        id: connect_vpn
+  deploy: 
+    #needs: build
+    #if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install OpenVPN
+        run: |
+          sudo apt update
+          sudo apt install -y openvpn openvpn-systemd-resolved
+      - name: Connect to VPN
+        uses: "kota65535/github-openvpn-connect-action@v1"
         with:
-          PING_URL: 20.91.198.48
-          FILE_OVPN: '.github/vpn/config.ovpn'
-          SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
-        env:
-          CA_CRT: ${{ secrets.CA_CRT}}
-          USER_CRT: ${{ secrets.USER_CRT }}
-          USER_KEY: ${{ secrets.USER_KEY }}
-      - name: Check Connect VPN
-        run: echo ${{ steps.connect_vpn.outputs.STATUS }}
-        
-      - name: kill vpn
+          config_file: ./github/workflows/client.ovpn
+          username: 'openvpn'
+          password: ${{ secrets.VPN_PASSWORD }}
+          client_key: ${{ secrets.USER_KEY }}
+
+      - name: Kör ssh command via using private key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: kubectl rollout restart deployment cloudapp
+
+      - name: Stäng vpn
         if: always()
         run: sudo killall openvpn
+
+
+
+
+  # connect-open-vpn:
+  #   #needs: build
+  #   #if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v1
+  #     - name: Install Open VPN
+  #       run: sudo apt-get install openvpn
+
+  #     - name: Connect VPN
+  #       uses: golfzaptw/action-connect-ovpn@master
+  #       id: connect_vpn
+  #       with:
+  #         PING_URL: 20.91.198.48
+  #         FILE_OVPN: '.github/vpn/config.ovpn'
+  #         SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
+  #       env:
+  #         CA_CRT: ${{ secrets.CA_CRT}}
+  #         USER_CRT: ${{ secrets.USER_CRT }}
+  #         USER_KEY: ${{ secrets.USER_KEY }}
+  #     - name: Check Connect VPN
+  #       run: echo ${{ steps.connect_vpn.outputs.STATUS }}
+
+  #     - name: kill vpn
+  #       if: always()
+  #       run: sudo killall openvpn
 
 
       # - uses: actions/checkout@v2
