--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -65,8 +65,8 @@ jobs:
 
 
   deploy: 
-    #needs: build
-    #if: github.ref == 'refs/heads/main'
+    needs: build
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -96,87 +96,3 @@ jobs:
       - name: Stäng vpn
         if: always()
         run: sudo killall openvpn
-
-
-
-
-  # connect-open-vpn:
-  #   #needs: build
-  #   #if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - name: Install Open VPN
-  #       run: sudo apt-get install openvpn
-
-  #     - name: Connect VPN
-  #       uses: golfzaptw/action-connect-ovpn@master
-  #       id: connect_vpn
-  #       with:
-  #         PING_URL: 20.91.198.48
-  #         FILE_OVPN: '.github/vpn/config.ovpn'
-  #         SECRET: ${{ secrets.SECRET_USERNAME_PASSWORD }}
-  #       env:
-  #         CA_CRT: ${{ secrets.CA_CRT}}
-  #         USER_CRT: ${{ secrets.USER_CRT }}
-  #         USER_KEY: ${{ secrets.USER_KEY }}
-  #     - name: Check Connect VPN
-  #       run: echo ${{ steps.connect_vpn.outputs.STATUS }}
-
-  #     - name: kill vpn
-  #       if: always()
-  #       run: sudo killall openvpn
-
-
-      # - uses: actions/checkout@v2
-      # - name: Install OpenVPN
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get --assume-yes --no-install-recommends install openvpn
-
-      # - name: Setup VPN config
-      #   run: |
-      #     echo "${{ secrets.CA_CERT }}" > ca.crt
-      #     echo "${{ secrets.USER_CRT }}" > user.crt
-      #     echo "${{ secrets.USER_KEY }}" > user.key
-      #     echo "${{ secrets.SECRET_USERNAME_PASSWORD}}" > secret.txt
-
-      # - name: Connect VPN
-      #   run: sudo openvpn --config "./.github/vpn/config.ovpn" --log "vpn.log" --daemon
-
-      # - name: Check Connect VPN
-      #   run: echo ${{ steps.connect_vpn.outputs.STATUS }}
-      # - name: ssh
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USERNAME }}
-      #     key: ${{ secrets.SERVER_KEY }}
-      #     port: ${{ secrets.SERVER_PORT }}
-      #     script: kubectl rollout restart deployment cloudapp
-
-      # - name: kill vpn
-      #   if: always()
-      #   run: sudo killall openvpn
-
-
-
-    # steps:
-    # - name: ssh
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.VPN_HOST }}
-    #     username: ${{ secrets.SERVER_USERNAME }}
-    #     key: ${{ secrets.VPN_KEY }}
-    #     port: ${{ secrets.SERVER_PORT }}
-    #     echo: "Victory is mine...maybe?"
-
-
-    # - name: ssh
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.SERVER_HOST }}
-    #     username: ${{ secrets.SERVER_USERNAME }}
-    #     key: ${{ secrets.SERVER_KEY }}
-    #     port: ${{ secrets.SERVER_PORT }}
-    #     script: kubectl rollout restart deployment cloudapp
