--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -76,6 +76,12 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y openvpn openvpn-systemd-resolved
+      - name: Setup VPN Config
+        run: |
+          echo "${{ secrets.CA_CERT }}" > ca.crt
+          echo "${{ secrets.USER_CERT }}" > client.crt
+          echo "${{ secrets.TLS_KEY }}" > tls.key
+
       - name: Connect to VPN
         uses: "kota65535/github-openvpn-connect-action@v1"
         with:
@@ -84,7 +90,7 @@ jobs:
           password: ${{ secrets.VPN_PASSWORD }}
           client_key: ${{ secrets.USER_KEY }}
 
-      - name: Kör ssh command via using private key
+      - name: Run ssh command via using private key
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
