changes to yaml-file

--- a/.k8s/k8s.yaml
+++ b/.k8s/k8s.yaml
@@ -23,6 +23,7 @@ spec:
        containers: 
        - name: cloudapp
          image: mikaelaolsson/cloudapp:latest
+         imagePullPolicy: Always
          ports:
          - containerPort: 80
 ---
