--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
     - name: Check in to branch
       uses: actions/checkout@v2
+
+    - name: Set the version-variable
+      run: echo "RELEASE_VERSION=$(echo ${GIT_MESSAGE} | grep -Po '(?<=--version=)[^;]+')" >> $GITHUB_ENV
+      env:
+          GIT_MESSAGE: ${{github.event.head_commit.message}}
+
+    - name: Test
+      run: echo $RELEASE_VERSION
       
     - name: Setup Dotnet Environment
       uses: actions/setup-dotnet@v1
