--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,13 +15,13 @@ jobs:
     - name: Check in to branch
       uses: actions/checkout@v2
 
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v3
-      with:
-        images: mikaelaolsson/cloudapp
-        tags: |
-          type=semver,pattern={{version}}
+    - name: Set the version-variable
+      run: echo "RELEASE_VERSION=$(echo ${GIT_MESSAGE} | grep -Po '(?<=--version=)[^;]+')" >> $GITHUB_ENV
+      env:
+          GIT_MESSAGE: ${{github.event.head_commit.message}}
+
+    - name: Test
+      run: echo $RELEASE_VERSION
       
     - name: Setup Dotnet Environment
       uses: actions/setup-dotnet@v1
@@ -41,25 +41,13 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
 
-
-    - name: Building the Docker Image 
+    - name: Building the Docker Image with dev-tag
       #if: github.ref == 'refs/heads/dev'
       uses: docker/build-push-action@v2.9.0
       with:
           push: true
-          tags: mikaelaolsson/cloudapp:${{ steps.meta.outputs.tags }}
+          tags: mikaelaolsson/cloudapp:$RELEASE_VERSION
           file: ./CloudApp/Dockerfile
-
-
-
-
-    # - name: Building the Docker Image with dev-tag
-    #   if: github.ref == 'refs/heads/dev'
-    #   uses: docker/build-push-action@v2.9.0
-    #   with:
-    #       push: true
-    #       tags: mikaelaolsson/cloudapp:dev
-    #       file: ./CloudApp/Dockerfile
 
     # - name: Building the Docker Image with latest-tag
     #   if: github.ref == 'refs/heads/main'
