--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,7 +46,7 @@ jobs:
       uses: docker/build-push-action@v2.9.0
       with:
           push: true
-          tags: mikaelaolsson/cloudapp:$RELEASE_VERSION
+          tags: mikaelaolsson/cloudapp:${{ RELEASE_VERSION }}
           file: ./CloudApp/Dockerfile
 
     # - name: Building the Docker Image with latest-tag
