--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Check in to branch
       uses: actions/checkout@v2
 
+    - name: Set version variable
+      run: echo "VERSION=$(echo ${GIT_MESSAGE} | grep -Po '(?<=--version=)[^;]+')" >> $GITHUB_ENV
+      env:
+        GIT_MESSAGE: ${{github.event.head_commit.message}}
+
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v3
@@ -42,7 +47,7 @@ jobs:
       uses: docker/build-push-action@v2.9.0
       with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}-$VERSION
           file: ./CloudApp/Dockerfile
 
 
