--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,8 @@ jobs:
       uses: docker/build-push-action@v2.9.0
       with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-$VERSION
+          #tags: ${{ steps.meta.outputs.tags }}-$VERSION
+          tags: $VERSION
           file: ./CloudApp/Dockerfile
 
 
