--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Test
       run: echo $VERSION
 
+    - name: test 2
+      run: echo ${{ steps.meta.outputs.tags }}
+
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v3
@@ -47,7 +50,7 @@ jobs:
             password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Building the Docker Image
-      run: docker build -t mikaelaolsson/cloudapp:$VERSION .
+      run: docker build -t mikaelaolsson/cloudapp:${{ steps.meta.outputs.tags }}-$VERSION .
 
 
     - name: Pushing the Docker Image
