--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,7 +50,7 @@ jobs:
             password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Building the Docker Image
-      run: docker build -t mikaelaolsson/cloudapp:${{ steps.meta.outputs.tags }}-$VERSION .
+      run: docker build -t ${{ steps.meta.outputs.tags }}-$VERSION .
 
 
     - name: Pushing the Docker Image
