--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,11 +49,23 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
 
+
     - name: Building the Docker Image
+      if: $VERSION != ""
       run: docker build -t ${{ steps.meta.outputs.tags }}-$VERSION .
 
     - name: Pushing the Docker Image
+      if: $VERSION != ""
       run: docker push ${{ steps.meta.outputs.tags }}-$VERSION
+
+
+    - name: Building the Docker Image
+      if: $VERSION == ""
+      run: docker build -t ${{ steps.meta.outputs.tags }} .
+
+    - name: Pushing the Docker Image
+      if: $VERSION == ""
+      run: docker push ${{ steps.meta.outputs.tags }}
 
 
 
