--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,21 +51,10 @@ jobs:
 
 
     - name: Building the Docker Image
-      if: $VERSION != ""
-      run: docker build -t ${{ steps.meta.outputs.tags }}-$VERSION .
+      run: docker build -t ${{ steps.meta.outputs.tags }}$VERSION .
 
     - name: Pushing the Docker Image
-      if: $VERSION != ""
-      run: docker push ${{ steps.meta.outputs.tags }}-$VERSION
-
-
-    - name: Building the Docker Image
-      if: $VERSION == ""
-      run: docker build -t ${{ steps.meta.outputs.tags }} .
-
-    - name: Pushing the Docker Image
-      if: $VERSION == ""
-      run: docker push ${{ steps.meta.outputs.tags }}
+      run: docker push ${{ steps.meta.outputs.tags }}$VERSION
 
 
 
