--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,12 +19,6 @@ jobs:
       env:
         GIT_MESSAGE: ${{github.event.head_commit.message}}
 
-    - name: Test
-      run: echo $VERSION
-
-    - name: test 2
-      run: echo ${{ steps.meta.outputs.tags }}
-
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v3
@@ -51,9 +45,11 @@ jobs:
 
 
     - name: Building the Docker Image
+      if: github.ref != 'refs/heads/main'
       run: docker build -t ${{ steps.meta.outputs.tags }}$VERSION .
 
     - name: Pushing the Docker Image
+      if: github.ref != 'refs/heads/main'
       run: docker push ${{ steps.meta.outputs.tags }}$VERSION
 
 
@@ -74,13 +70,13 @@ jobs:
     #       tags: mikaelaolsson/cloudapp:dev
     #       file: ./CloudApp/Dockerfile
 
-    # - name: Building the Docker Image with latest-tag
-    #   if: github.ref == 'refs/heads/main'
-    #   uses: docker/build-push-action@v2.9.0
-    #   with:
-    #       push: true
-    #       tags: mikaelaolsson/cloudapp:latest
-    #       file: ./CloudApp/Dockerfile
+    - name: Building the Docker Image with latest-tag
+      if: github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v2.9.0
+      with:
+          push: true
+          tags: mikaelaolsson/cloudapp:latest
+         # file: ./CloudApp/Dockerfile
   
   pull-request:
     if: github.ref == 'refs/heads/dev'
